--- a/vpc/subnet.yaml
+++ b/vpc/subnet.yaml
@@ -7,7 +7,7 @@ spec:
     region: us-east-1
     cidrBlock: 10.0.0.0/24
     enableDnsSupport: true
-    enableDnsHostNames: true
+    enableDnsHostNames: false
     instanceTenancy: default
   providerConfigRef:
     name: default
