--- a/demo1/s3bucket.yaml
+++ b/demo1/s3bucket.yaml
@@ -1,7 +1,7 @@
 apiVersion: s3.aws.upbound.io/v1beta1
 kind: Bucket
 metadata:
-  Name: crossplane-bucket-02071979
+  name: crossplane-bucket-02071979
 spec:
   forProvider:
     region: us-east-1
